Fixes #13048 - Exception from oeje11wjt.JakartaClientClassLoaderTest#websocketProvidedByServer
Converted LOG.warn() into LOG.debug() for `ServiceLoader` attempts via `TypeUtil` that result in an exception.

Such cases may be normal and don't really warrant a warning.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>