@@ -712,11 +712,16 @@ public class TypeUtil
     }
 
     /**
-     * Used on a {@link ServiceLoader#stream()} with {@link Stream#flatMap(Function)},
-     * so that in the case a {@link ServiceConfigurationError} is thrown it warns and
-     * continues iterating through the service loader.
-     * <br>Usage Example:
-     * <p>{@code ServiceLoader.load(Service.class).stream().flatMap(TypeUtil::providerMap).collect(Collectors.toList());}</p>
+     * <p>Used on a {@link ServiceLoader#stream()} with {@link Stream#flatMap(Function)},
+     * so that in the case a {@link ServiceConfigurationError} is thrown the iteration
+     * continues to the next service provider.</p>
+     * <p>Usage Example:</p>
+     * <pre>{@code
+     * List<Service> services = ServiceLoader.load(Service.class).stream()
+     *         .flatMap(TypeUtil::mapToService)
+     *         .toList();
+     * }</pre>
+     *
      * @param <T> The class of the service type.
      * @param provider The service provider to instantiate.
      * @return a stream of the loaded service providers.
@@ -729,15 +734,17 @@ public class TypeUtil
         }
         catch (ServiceConfigurationError error)
         {
-            LOG.warn("Service Provider failed to load", error);
+            if (LOG.isDebugEnabled())
+                LOG.debug("Service Provider failed to load", error);
             return Stream.empty();
         }
     }
 
     /**
      * Utility method to provide a stream of the service type from a {@link ServiceLoader}.
-     * Log warnings will be given for any {@link ServiceConfigurationError}s which occur when loading or
-     * instantiating the services.
+     * {@link ServiceConfigurationError}s thrown when loading or instantiating the services
+     * are logged and ignored, so that the stream can proceed with the next service provider.
+     *
      * @param serviceLoader the ServiceLoader instance to use.
      * @param <T> the type of the service to load.
      * @return a stream of the service type which will not throw {@link ServiceConfigurationError}.
